adds child class

--- a/lego_scraper.ipynb
+++ b/lego_scraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -14,16 +14,10 @@
       "====== WebDriver manager ======\n",
       "Current google-chrome version is 100.0.4896\n",
       "Get LATEST chromedriver version for 100.0.4896 google-chrome\n",
-      "Driver [/Users/ESheldon/.wdm/drivers/chromedriver/mac64/100.0.4896.60/chromedriver] found in cache\n",
-      "/var/folders/pk/qjr6ty3x7s58790y_7_dwl240000gn/T/ipykernel_14255/3021468907.py:38: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "Trying to download new driver from https://chromedriver.storage.googleapis.com/100.0.4896.60/chromedriver_mac64.zip\n",
+      "Driver has been saved in cache [/Users/ESheldon/.wdm/drivers/chromedriver/mac64/100.0.4896.60]\n",
+      "/var/folders/pk/qjr6ty3x7s58790y_7_dwl240000gn/T/ipykernel_2172/1187078300.py:38: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "  self.driver = Chrome(ChromeDriverManager().install())\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'id': ['2f89c5e2ddd3', '3d5129626a93', '55c196e772e8', '79638e50a54f', '2fee44fe3dc6'], 'uuid': ['20dd01df-1fc1-4362-aeb8-8822c3a37105', '5248da9a-89c9-4f1e-8244-9d458f692b43', '0518e499-9536-4417-8440-90f68cb9ff3f', '6363cbbd-82e0-4e42-b39d-2ff9d2c6c511', 'c47bef40-a7f6-4ac2-979b-fdff62aae9a7'], 'URL': ['https://ideas.lego.com/projects/9193e8c1-0546-4e73-99a2-2f89c5e2ddd3', 'https://ideas.lego.com/projects/4fab9083-ec71-46bf-80d9-3d5129626a93', 'https://ideas.lego.com/projects/8529a4b5-f36a-4779-943e-55c196e772e8', 'https://ideas.lego.com/projects/aa4cfa30-e9a2-418d-a1a0-79638e50a54f', 'https://ideas.lego.com/projects/1ef44bb0-7e5a-4484-94b6-2fee44fe3dc6'], 'idea_name': ['Life-Size Replica Violin', 'Lego Violin', 'Sherlock Holmes 221 B Baker Street', 'The Boxcar Children', '221 B Baker Street in a Book'], 'date': ['May 03, 2021', 'Sep 10, 2021', 'Feb 05, 2021', 'Mar 14, 2022', 'Dec 31, 2020'], 'creator': ['\\n                            AwesomeBilly3\\n                        ', '\\n                            YoSub Joo\\n                        ', '\\n                            Mr Brickhead\\n                        ', '\\n                            misterion\\n                        ', '\\n                            CaptainBrick08\\n                        '], 'number_of_supporters': ['\\n                336\\n            ', '\\n                872\\n            ', '\\n                1,377\\n            ', '\\n                238\\n            ', '\\n                1,357\\n            '], 'number_of_days_remaining': ['\\n                82\\n            ', '\\n                211\\n            ', '\\n                176\\n            ', '\\n                396\\n            ', '\\n                140\\n            '], 'image_links': [['https://ideascdn.lego.com/media/generate/lego_ci/5bd2c0e4-5612-414d-9d13-69a88a25dfcf/resize:950:633/webp', 'https://ideascdn.lego.com/media/generate/lego_ci/5bd2c0e4-5612-414d-9d13-69a88a25dfcf/resize:128:85/webp', 'https://ideascdn.lego.com/media/generate/lego_ci/5d460562-b2d6-433e-9da3-78cfcf3a8f73/resize:128:85/webp', 'https://ideascdn.lego.com/media/generate/lego_ci/f542a1da-565b-42d6-beee-27356daed1df/resize:128:85/webp'], ['https://ideascdn.lego.com/media/generate/lego_ci/2ffa0dce-e1e5-4a93-997d-d0f5ef238435/resize:950:633/webp', 'https://ideascdn.lego.com/media/generate/lego_ci/2ffa0dce-e1e5-4a93-997d-d0f5ef238435/resize:128:85/webp', 'https://ideascdn.lego.com/media/generate/lego_ci/59361f47-6a91-49ed-9ae8-4f812ff6e14e/resize:128:85/webp', 'https://ideascdn.lego.com/media/generate/lego_ci/ef860bcb-e77d-4e3a-b6e9-243e065d0346/resize:128:85/webp', 'https://ideascdn.lego.com/media/generate/lego_ci/56df42de-ec6b-469a-8aba-844f1a863663/resize:128:85/webp', 'https://ideascdn.lego.com/media/generate/lego_ci/ee344193-f816-4aac-be3c-d2ac5ae3afed/resize:128:85/webp', 'https://ideascdn.lego.com/media/generate/lego_ci/0ad7619e-137f-4784-b06b-1603a6ac42ba/resize:128:85/webp', 'https://ideascdn.lego.com/media/generate/lego_ci/6ce4df44-eb41-43ab-9b40-7ab6eab9e0d4/resize:128:85/webp', 'https://ideascdn.lego.com/media/generate/lego_ci/7ccbc4ed-7361-4e43-97de-f76b9c3f4f6a/resize:128:85/webp'], ['https://ideascdn.lego.com/media/generate/lego_ci/4a81803c-120e-4706-9a52-926a41b9a4df/resize:950:633/webp', 'https://ideascdn.lego.com/media/generate/lego_ci/4a81803c-120e-4706-9a52-926a41b9a4df/resize:128:85/webp', 'https://ideascdn.lego.com/media/generate/lego_ci/b65127a2-f099-4f24-b952-45a247d515aa/resize:128:85/webp', 'https://ideascdn.lego.com/media/generate/lego_ci/82ea0742-aad8-4471-9293-0a313e019fc5/resize:128:85/webp', 'https://ideascdn.lego.com/media/generate/lego_ci/eaa10b78-d272-4cba-a356-76b4e183e3c1/resize:128:85/webp', 'https://ideascdn.lego.com/media/generate/lego_ci/24bc45ba-82a6-465a-a56c-21d10c8409e4/resize:128:85/webp', 'https://ideascdn.lego.com/media/generate/lego_ci/44ed340d-423d-4281-963a-94d20909cad8/resize:128:85/webp', 'https://ideascdn.lego.com/media/generate/lego_ci/07390c62-aeb4-463a-8f9b-02c5bf022efd/resize:128:85/webp', 'https://ideascdn.lego.com/media/generate/lego_ci/a57d30ca-107e-4585-b321-a867dbe7b627/resize:128:85/webp', 'https://ideascdn.lego.com/media/generate/lego_ci/80fcb0e5-22cd-425f-98ca-d70bb98a5394/resize:128:85/webp', 'https://ideascdn.lego.com/media/generate/lego_ci/0c92ac46-d8b3-4206-a644-ebe318ad6db4/resize:128:85/webp', 'https://ideascdn.lego.com/media/generate/lego_ci/106d1092-03aa-4c68-ab7c-77043f09e6f0/resize:128:85/webp', 'https://ideascdn.lego.com/media/generate/lego_ci/6552595f-2089-4ea4-80db-a3aa1fd63e7f/resize:128:85/webp', 'https://ideascdn.lego.com/media/generate/lego_ci/c9bd1eb8-af9b-4756-b8ca-e96278bbf59c/resize:128:85/webp', 'https://ideascdn.lego.com/media/generate/lego_ci/dd65b43d-741b-4c3e-9c70-494627197462/resize:128:85/webp'], ['https://ideascdn.lego.com/media/generate/lego_ci/3bc619b1-0e5c-4dac-9015-a4f3bccba506/resize:950:633/webp', 'https://ideascdn.lego.com/media/generate/lego_ci/3bc619b1-0e5c-4dac-9015-a4f3bccba506/resize:128:85/webp', 'https://ideascdn.lego.com/media/generate/lego_ci/f684a202-ccf0-47ee-8771-f191b65db841/resize:128:85/webp', 'https://ideascdn.lego.com/media/generate/lego_ci/1a5b61a4-9d6b-4b05-84fe-774a9206ba60/resize:128:85/webp', 'https://ideascdn.lego.com/media/generate/lego_ci/e7b79481-a56f-46d1-ab39-0f55d2a65a3b/resize:128:85/webp', 'https://ideascdn.lego.com/media/generate/lego_ci/8163d608-9d24-48f5-a513-e95b6e6deb46/resize:128:85/webp', 'https://ideascdn.lego.com/media/generate/lego_ci/9e26311b-2aae-491e-a8e3-9da07bee8c1e/resize:128:85/webp', 'https://ideascdn.lego.com/media/generate/lego_ci/241c2dd8-560d-49f9-8895-485ffbdd7279/resize:128:85/webp', 'https://ideascdn.lego.com/media/generate/lego_ci/467f9add-3b75-4ec4-860f-c5ebafa4c1a5/resize:128:85/webp'], ['https://ideascdn.lego.com/media/generate/lego_ci/c7c5dbe1-74bf-47a1-bd6b-5ee09668db50/resize:950:633/webp', 'https://ideascdn.lego.com/media/generate/lego_ci/c7c5dbe1-74bf-47a1-bd6b-5ee09668db50/resize:128:85/webp', 'https://ideascdn.lego.com/media/generate/lego_ci/8fa167d8-82e9-4c6d-a6c4-870a7db4d871/resize:128:85/webp', 'https://ideascdn.lego.com/media/generate/lego_ci/98cc0e05-330a-43ac-b9d4-ce55dce7bda3/resize:128:85/webp', 'https://ideascdn.lego.com/media/generate/lego_ci/77428504-9d46-45c8-84aa-97ee8a2235c5/resize:128:85/webp', 'https://ideascdn.lego.com/media/generate/lego_ci/fdaab2eb-8de0-4ed2-8c95-a5bde1f95b6e/resize:128:85/webp', 'https://ideascdn.lego.com/media/generate/lego_ci/cafe5a72-5056-455a-ba66-261f95f252db/resize:128:85/webp', 'https://ideascdn.lego.com/media/generate/lego_ci/ebf8ef1c-b915-436d-9ed5-57028066a58d/resize:128:85/webp', 'https://ideascdn.lego.com/media/generate/lego_ci/c74e7010-3274-489c-ac68-b7eb45a46d13/resize:128:85/webp', 'https://ideascdn.lego.com/media/generate/lego_ci/aaf15a5e-f36c-4cf9-8fc8-b3ce9a93423e/resize:128:85/webp', 'https://ideascdn.lego.com/media/generate/lego_ci/d4298071-c789-4664-be97-d500f110517f/resize:128:85/webp', 'https://ideascdn.lego.com/media/generate/lego_ci/c47b6cc5-49d0-471f-b5ec-ec85f0a221de/resize:128:85/webp', 'https://ideascdn.lego.com/media/generate/lego_ci/880f054a-bdbb-45a8-8ec0-f4f28218557b/resize:128:85/webp', 'https://ideascdn.lego.com/media/generate/lego_ci/b16fe7cc-c4fb-4eb1-b3fb-3caa42c481fa/resize:128:85/webp', 'https://ideascdn.lego.com/media/generate/lego_ci/a992b277-58dd-4dde-98f6-838201222664/resize:128:85/webp']]}\n"
      ]
     }
    ],
@@ -275,27 +269,37 @@
     "            for j, img in enumerate(lst):\n",
     "                urllib.request.urlretrieve(img, f'{path}/{self.search_term}/{self.search_term}{i}.{j}.webp')\n",
     "\n",
+    "class LegoScraper(Scraper):\n",
+    "    def get_info_from_java(self):\n",
+    "        self.num_supporters_list = []\n",
+    "        self.num_days_remaining_list = []\n",
+    "        for link in self.link_list:\n",
+    "            self.driver.get(link)\n",
+    "            soup = bs(self.driver.page_source, 'html.parser')\n",
+    "            numbers = soup.findAll('div', class_= \"count\")\n",
+    "            self.num_supporters_list.append(numbers[0].text)\n",
+    "            self.num_days_remaining_list.append(numbers[1].text)\n",
     "\n",
     "if __name__ == '__main__': \n",
     "\n",
     "    def web_scraper():\n",
     "        #search_term = input('I would like to search for... ')\n",
     "        search_term = 'violin'\n",
-    "        scraper = Scraper('https://ideas.lego.com', search_term)\n",
+    "        scraper = LegoScraper('https://ideas.lego.com', search_term)\n",
     "        try:\n",
     "            scraper.accept_cookies(frame_id=None, XPATH= '//button[@aria-label=\"Reject cookies\"]')\n",
     "            #scraper.explore_product_ideas('//a[@class=\"sub-menu\"][1]', '//div[@class=\"header-link\"][1]')\n",
     "            scraper.search(name='query')\n",
     "            scraper.get_list_links('//*[@id=\"search_results\"]', './div')\n",
     "            time.sleep(2)\n",
-    "            scraper.get_img_links(XPATH_main_image='//div[@class=\"image-sizing-wrapper\"]', XPATH_thumbnail_container='//div[@class=\"thumbnails-tray\"]', XPATH_thumbnails='./div')\n",
-    "            scraper.create_id()\n",
+    "            # scraper.get_img_links(XPATH_main_image='//div[@class=\"image-sizing-wrapper\"]', XPATH_thumbnail_container='//div[@class=\"thumbnails-tray\"]', XPATH_thumbnails='./div')\n",
+    "            # scraper.create_id()\n",
     "            #scraper.get_html()\n",
-    "            scraper.get_info_from_html()\n",
-    "            scraper.get_info_from_java()\n",
-    "            #scraper.get_info()\n",
-    "            scraper.collate_info()\n",
-    "            scraper.download_raw_data()\n",
+    "            # scraper.get_info_from_html()\n",
+    "            # scraper.get_info_from_java()\n",
+    "            # #scraper.get_info()\n",
+    "            # scraper.collate_info()\n",
+    "            # scraper.download_raw_data()\n",
     "            #scraper.download_images()\n",
     "            #scraper.create_uuid()\n",
     "            # scraper.scroll_down_bottom()\n",
