moves some methods to child class

--- a/lego_scraper.ipynb
+++ b/lego_scraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -14,10 +14,16 @@
       "====== WebDriver manager ======\n",
       "Current google-chrome version is 100.0.4896\n",
       "Get LATEST chromedriver version for 100.0.4896 google-chrome\n",
-      "Trying to download new driver from https://chromedriver.storage.googleapis.com/100.0.4896.60/chromedriver_mac64.zip\n",
-      "Driver has been saved in cache [/Users/ESheldon/.wdm/drivers/chromedriver/mac64/100.0.4896.60]\n",
-      "/var/folders/pk/qjr6ty3x7s58790y_7_dwl240000gn/T/ipykernel_2172/1187078300.py:38: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "Driver [/Users/ESheldon/.wdm/drivers/chromedriver/mac64/100.0.4896.60/chromedriver] found in cache\n",
+      "/var/folders/pk/qjr6ty3x7s58790y_7_dwl240000gn/T/ipykernel_2172/400412303.py:38: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "  self.driver = Chrome(ChromeDriverManager().install())\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['\\n                338\\n            ', '\\n                873\\n            ', '\\n                1,377\\n            ', '\\n                243\\n            ', '\\n                1,358\\n            ']\n"
      ]
     }
    ],
@@ -208,18 +214,18 @@
     "            self.link_id.append(ID)\n",
     "            self.link_uuid.append(UUID)\n",
     "    \n",
-    "    def collate_info(self):\n",
-    "        self.info = {\"id\": self.link_id,\n",
-    "                \"uuid\": self.link_uuid,\n",
-    "                \"URL\": self.link_list,\n",
-    "                \"idea_name\": self.name_list,\n",
-    "                \"date\": self.date_list,\n",
-    "                \"creator\": self.creator_list,\n",
-    "                \"number_of_supporters\": self.num_supporters_list,\n",
-    "                \"number_of_days_remaining\": self.num_days_remaining_list,\n",
-    "                \"image_links\": self.img_list}\n",
-    "        print(self.info) #delete later\n",
-    "        return self.info\n",
+    "    # def collate_info(self):\n",
+    "    #     self.info = {\"id\": self.link_id,\n",
+    "    #             \"uuid\": self.link_uuid,\n",
+    "    #             \"URL\": self.link_list,\n",
+    "    #             \"idea_name\": self.name_list,\n",
+    "    #             \"date\": self.date_list,\n",
+    "    #             \"creator\": self.creator_list,\n",
+    "    #             \"number_of_supporters\": self.num_supporters_list,\n",
+    "    #             \"number_of_days_remaining\": self.num_days_remaining_list,\n",
+    "    #             \"image_links\": self.img_list}\n",
+    "    #     print(self.info) #delete later\n",
+    "    #     return self.info\n",
     "\n",
     "    def get_html(self, url):\n",
     "        r = requests.get(url)\n",
@@ -228,31 +234,31 @@
     "    def find_in_html(self, tag, attribute, attribute_name):\n",
     "        self.soup.find(tag, {attribute: attribute_name}).text\n",
     "\n",
-    "    def get_info_from_html(self):\n",
-    "        self.name_list = []\n",
-    "        self.date_list = []\n",
-    "        self.creator_list =[]\n",
+    "    # def get_info_from_html(self):\n",
+    "    #     self.name_list = []\n",
+    "    #     self.date_list = []\n",
+    "    #     self.creator_list =[]\n",
     "        \n",
-    "        for link in self.link_list:\n",
-    "            self.get_html(link)\n",
-    "            name = self.soup.find('h1').text\n",
-    "            self.name_list.append(name)\n",
+    "    #     for link in self.link_list:\n",
+    "    #         self.get_html(link)\n",
+    "    #         name = self.soup.find('h1').text\n",
+    "    #         self.name_list.append(name)\n",
     "\n",
-    "            date = self.soup.find('span', {\"class\":\"published-date\"}).text\n",
-    "            self.date_list.append(date)\n",
+    "    #         date = self.soup.find('span', {\"class\":\"published-date\"}).text\n",
+    "    #         self.date_list.append(date)\n",
     "\n",
-    "            creator_name = self.soup.find('a', {'data-axl':\"alias\"}).text\n",
-    "            self.creator_list.append(creator_name)\n",
+    "    #         creator_name = self.soup.find('a', {'data-axl':\"alias\"}).text\n",
+    "    #         self.creator_list.append(creator_name)\n",
     "\n",
-    "    def get_info_from_java(self):\n",
-    "        self.num_supporters_list = []\n",
-    "        self.num_days_remaining_list = []\n",
-    "        for link in self.link_list:\n",
-    "            self.driver.get(link)\n",
-    "            soup = bs(self.driver.page_source, 'html.parser')\n",
-    "            numbers = soup.findAll('div', class_= \"count\")\n",
-    "            self.num_supporters_list.append(numbers[0].text)\n",
-    "            self.num_days_remaining_list.append(numbers[1].text)\n",
+    "    # def get_info_from_java(self):\n",
+    "    #     self.num_supporters_list = []\n",
+    "    #     self.num_days_remaining_list = []\n",
+    "    #     for link in self.link_list:\n",
+    "    #         self.driver.get(link)\n",
+    "    #         soup = bs(self.driver.page_source, 'html.parser')\n",
+    "    #         numbers = soup.findAll('div', class_= \"count\")\n",
+    "    #         self.num_supporters_list.append(numbers[0].text)\n",
+    "    #         self.num_days_remaining_list.append(numbers[1].text)\n",
     "\n",
     "    def download_raw_data(self,path='.'):\n",
     "        if not os.path.exists(f'{path}/raw_data'):\n",
@@ -279,6 +285,37 @@
     "            numbers = soup.findAll('div', class_= \"count\")\n",
     "            self.num_supporters_list.append(numbers[0].text)\n",
     "            self.num_days_remaining_list.append(numbers[1].text)\n",
+    "        print(self.num_supporters_list)\n",
+    "    \n",
+    "    def get_info_from_html(self):\n",
+    "        self.name_list = []\n",
+    "        self.date_list = []\n",
+    "        self.creator_list =[]\n",
+    "        \n",
+    "        for link in self.link_list:\n",
+    "            self.get_html(link)\n",
+    "            name = self.soup.find('h1').text\n",
+    "            self.name_list.append(name)\n",
+    "\n",
+    "            date = self.soup.find('span', {\"class\":\"published-date\"}).text\n",
+    "            self.date_list.append(date)\n",
+    "\n",
+    "            creator_name = self.soup.find('a', {'data-axl':\"alias\"}).text\n",
+    "            self.creator_list.append(creator_name)\n",
+    "\n",
+    "    def collate_info(self):\n",
+    "        self.info = {\"id\": self.link_id,\n",
+    "                \"uuid\": self.link_uuid,\n",
+    "                \"URL\": self.link_list,\n",
+    "                \"idea_name\": self.name_list,\n",
+    "                \"date\": self.date_list,\n",
+    "                \"creator\": self.creator_list,\n",
+    "                \"number_of_supporters\": self.num_supporters_list,\n",
+    "                \"number_of_days_remaining\": self.num_days_remaining_list,\n",
+    "                \"image_links\": self.img_list}\n",
+    "        return self.info\n",
+    "\n",
+    "\n",
     "\n",
     "if __name__ == '__main__': \n",
     "\n",
@@ -296,7 +333,7 @@
     "            # scraper.create_id()\n",
     "            #scraper.get_html()\n",
     "            # scraper.get_info_from_html()\n",
-    "            # scraper.get_info_from_java()\n",
+    "            scraper.get_info_from_java()\n",
     "            # #scraper.get_info()\n",
     "            # scraper.collate_info()\n",
     "            # scraper.download_raw_data()\n",
@@ -310,7 +347,7 @@
     "        finally: scraper.quit()\n",
     "\n",
     "\n",
-    "    web_scraper()\n",
+    "    #web_scraper()\n",
     "\n"
    ]
   }
