downloads data from collocations scraper

--- a/lego_scraper.ipynb
+++ b/lego_scraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -15,15 +15,8 @@
       "Current google-chrome version is 100.0.4896\n",
       "Get LATEST chromedriver version for 100.0.4896 google-chrome\n",
       "Driver [/Users/ESheldon/.wdm/drivers/chromedriver/mac64/100.0.4896.60/chromedriver] found in cache\n",
-      "/var/folders/pk/qjr6ty3x7s58790y_7_dwl240000gn/T/ipykernel_2172/400412303.py:38: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "/var/folders/pk/qjr6ty3x7s58790y_7_dwl240000gn/T/ipykernel_1442/1143057675.py:38: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "  self.driver = Chrome(ChromeDriverManager().install())\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['\\n                338\\n            ', '\\n                873\\n            ', '\\n                1,377\\n            ', '\\n                243\\n            ', '\\n                1,358\\n            ']\n"
      ]
     }
    ],
@@ -73,8 +66,8 @@
     "    def open_url(self, url):\n",
     "        self.driver.get(url)\n",
     "    \n",
-    "    def search(self, name=str):\n",
-    "        search_bar = self.driver.find_element(By.NAME, name)\n",
+    "    def search(self, XPATH):\n",
+    "        search_bar = self.driver.find_element(By.XPATH, XPATH)\n",
     "        search_bar.click()\n",
     "        search_bar.send_keys(self.search_term)\n",
     "        search_bar.send_keys(u'\\ue007')\n",
@@ -260,10 +253,10 @@
     "    #         self.num_supporters_list.append(numbers[0].text)\n",
     "    #         self.num_days_remaining_list.append(numbers[1].text)\n",
     "\n",
-    "    def download_raw_data(self,path='.'):\n",
-    "        if not os.path.exists(f'{path}/raw_data'):\n",
-    "            os.makedirs(f'{path}/raw_data')\n",
-    "        with open (f'{path}/raw_data/data.json', 'w') as f:\n",
+    "    def download_raw_data(self,path='.', file_name='raw_data'):\n",
+    "        if not os.path.exists(f'{path}/{file_name}'):\n",
+    "            os.makedirs(f'{path}/{file_name}')\n",
+    "        with open (f'{path}/{file_name}/data.json', 'w') as f:\n",
     "            json.dump(self.info, f, indent=\"\")\n",
     "\n",
     "\n",
@@ -285,7 +278,7 @@
     "            numbers = soup.findAll('div', class_= \"count\")\n",
     "            self.num_supporters_list.append(numbers[0].text)\n",
     "            self.num_days_remaining_list.append(numbers[1].text)\n",
-    "        print(self.num_supporters_list)\n",
+    "        #print(self.num_supporters_list)\n",
     "    \n",
     "    def get_info_from_html(self):\n",
     "        self.name_list = []\n",
@@ -313,20 +306,71 @@
     "                \"number_of_supporters\": self.num_supporters_list,\n",
     "                \"number_of_days_remaining\": self.num_days_remaining_list,\n",
     "                \"image_links\": self.img_list}\n",
-    "        return self.info\n",
+    "        #return self.info\n",
     "\n",
+    "class CollocationsScraper(Scraper):\n",
+    "    def create_dict(self):\n",
+    "        self.info = {\n",
+    "        # \"id\": self.link_id,\n",
+    "        #         \"uuid\": self.link_uuid,\n",
+    "                \"adj_rank-word-frequency\": [],\n",
+    "                \"adj_phrases\": [],\n",
+    "                \"verb_rank-word-frequency\": [],\n",
+    "                \"verb_phrases\": []}\n",
+    "        #print(self.info)\n",
     "\n",
+    "    def collate_data(self):\n",
+    "        self.info = {\n",
+    "        # \"id\": self.link_id,\n",
+    "        #         \"uuid\": self.link_uuid,\n",
+    "                \"adj_rank-word-frequency\": self.adj_frequency_list,\n",
+    "                #\"adj_phrases\": self.adj_phrase_list,\n",
+    "                \"verb_rank-word-frequency\": self.verb_frequency_list,\n",
+    "                \"verb_phrases\": self.verb_phrase_list}\n",
+    "        print(self.info)\n",
+    "    \n",
+    "    def get_phrases(self, word_class):\n",
+    "        self.adj_phrase_list = []\n",
+    "        self.verb_phrase_list = []\n",
+    "        new_url= f'{self.url}{word_class}/{self.search_term}'\n",
+    "        self.get_html(new_url)\n",
+    "        sentences = self.soup.findAll('li', {\"class\": \"btn-result list-group-item list-group-item-action\"})\n",
+    "        if word_class == 'adj':\n",
+    "            for sentence in sentences:\n",
+    "                self.adj_phrase_list.append(sentence.text)\n",
+    "                self.info[\"adj_phrases\"] = self.adj_phrase_list      \n",
+    "        if word_class == 'v':\n",
+    "            for sentence in sentences:\n",
+    "                self.verb_phrase_list.append(sentence.text)\n",
+    "            # for sentence in sentences:\n",
+    "        #     print(sentence.text)\n",
+    "\n",
+    "    def get_frequency(self, word_class):\n",
+    "        self.adj_frequency_list = []\n",
+    "        self.verb_frequency_list = []\n",
+    "        new_url = f'{self.url}{word_class}/{self.search_term}?mode=frequency'\n",
+    "        self.driver.get(new_url)\n",
+    "        self.get_html(new_url)\n",
+    "        words_frequency = self.soup.findAll('li', {\"class\": \"btn-result list-group-item list-group-item-action\"})\n",
+    "        if word_class == 'adj':\n",
+    "            for frequency in words_frequency:\n",
+    "                self.adj_frequency_list.append(frequency.text)      \n",
+    "        if word_class == 'v':\n",
+    "            for frequency in words_frequency:\n",
+    "                self.verb_frequency_list.append(frequency.text)  \n",
+    "        # for frequency in words_frequency:\n",
+    "        #     print(frequency.text)\n",
     "\n",
     "if __name__ == '__main__': \n",
     "\n",
-    "    def web_scraper():\n",
+    "    def web_scraper_lego():\n",
     "        #search_term = input('I would like to search for... ')\n",
     "        search_term = 'violin'\n",
     "        scraper = LegoScraper('https://ideas.lego.com', search_term)\n",
     "        try:\n",
     "            scraper.accept_cookies(frame_id=None, XPATH= '//button[@aria-label=\"Reject cookies\"]')\n",
     "            #scraper.explore_product_ideas('//a[@class=\"sub-menu\"][1]', '//div[@class=\"header-link\"][1]')\n",
-    "            scraper.search(name='query')\n",
+    "            scraper.search('//input[@name=\"query\"]')\n",
     "            scraper.get_list_links('//*[@id=\"search_results\"]', './div')\n",
     "            time.sleep(2)\n",
     "            # scraper.get_img_links(XPATH_main_image='//div[@class=\"image-sizing-wrapper\"]', XPATH_thumbnail_container='//div[@class=\"thumbnails-tray\"]', XPATH_thumbnails='./div')\n",
@@ -346,8 +390,25 @@
     "            # time.sleep(4)\n",
     "        finally: scraper.quit()\n",
     "\n",
-    "\n",
-    "    #web_scraper()\n",
+    "    def web_scraper_collocations():\n",
+    "        search_term = 'libertad'\n",
+    "        scraper = CollocationsScraper('https://inspirassion.com/es/', search_term)\n",
+    "        try:\n",
+    "            scraper.search('//input[@id=\"query\"]')\n",
+    "            scraper.create_dict()\n",
+    "            scraper.get_frequency(word_class='adj')\n",
+    "            scraper.get_phrases(word_class='adj')\n",
+    "            scraper.get_frequency(word_class='v')\n",
+    "            scraper.get_phrases(word_class='v')\n",
+    "            #scraper.collate_data()\n",
+    "            scraper.download_raw_data(file_name='raw_data_coll')\n",
+    "            time.sleep(2)\n",
+    "            # scraper.click_button('//span[@class=\"gl-new-dropdown-button-text\"]')\n",
+    "            # scraper.click_button('//*[@class=\"gl-new-dropdown-item\"][6]')\n",
+    "        finally: scraper.quit()\n",
+    "    \n",
+    "    #web_scraper_lego()\n",
+    "    web_scraper_collocations()\n",
     "\n"
    ]
   }
