adds methods to child class

--- a/lego_scraper.ipynb
+++ b/lego_scraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -15,7 +15,7 @@
       "Current google-chrome version is 100.0.4896\n",
       "Get LATEST chromedriver version for 100.0.4896 google-chrome\n",
       "Driver [/Users/ESheldon/.wdm/drivers/chromedriver/mac64/100.0.4896.60/chromedriver] found in cache\n",
-      "/var/folders/pk/qjr6ty3x7s58790y_7_dwl240000gn/T/ipykernel_1442/1143057675.py:38: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "/var/folders/pk/qjr6ty3x7s58790y_7_dwl240000gn/T/ipykernel_4968/1553962433.py:38: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "  self.driver = Chrome(ChromeDriverManager().install())\n"
      ]
     }
@@ -112,10 +112,6 @@
     "    def see_more(self, XPATH):\n",
     "        self.scroll_down_bottom()\n",
     "        self.click_button(XPATH)\n",
-    "        \n",
-    "    def explore_product_ideas(self, XPATH1, XPATH2):\n",
-    "        self.click_button(XPATH1)\n",
-    "        self.click_button(XPATH2)\n",
     "    \n",
     "    def infinite_scroll(self):\n",
     "        last_height = self.driver.execute_script(\"return document.body.scrollHeight\")\n",
@@ -198,14 +194,11 @@
     "    #     detail = self.driver.find_element(By.XPATH, XPATH)\n",
     "    #     lst_name.append(detail)\n",
     "    \n",
-    "    def create_id(self):\n",
-    "        self.link_id = []\n",
-    "        self.link_uuid = []\n",
-    "        for i in range(len(self.link_list)):\n",
-    "            ID = self.link_list[i][-12:]\n",
+    "    def create_uuid(self, result_list):\n",
+    "        self.uuid_list = []\n",
+    "        for i in range(len(result_list)):\n",
     "            UUID = str(uuid.uuid4())\n",
-    "            self.link_id.append(ID)\n",
-    "            self.link_uuid.append(UUID)\n",
+    "            self.uuid_list.append(UUID)\n",
     "    \n",
     "    # def collate_info(self):\n",
     "    #     self.info = {\"id\": self.link_id,\n",
@@ -280,6 +273,16 @@
     "            self.num_days_remaining_list.append(numbers[1].text)\n",
     "        #print(self.num_supporters_list)\n",
     "    \n",
+    "    def create_id(self):\n",
+    "        self.id_list = []\n",
+    "        for i in range(len(self.link_list)):\n",
+    "            ID = self.link_list[i][-12:]\n",
+    "            self.id_list.append(ID)\n",
+    "\n",
+    "    def explore_product_ideas(self, XPATH1, XPATH2):\n",
+    "        self.click_button(XPATH1)\n",
+    "        self.click_button(XPATH2)\n",
+    "\n",
     "    def get_info_from_html(self):\n",
     "        self.name_list = []\n",
     "        self.date_list = []\n",
@@ -319,15 +322,43 @@
     "                \"verb_phrases\": []}\n",
     "        #print(self.info)\n",
     "\n",
-    "    def collate_data(self):\n",
-    "        self.info = {\n",
-    "        # \"id\": self.link_id,\n",
-    "        #         \"uuid\": self.link_uuid,\n",
-    "                \"adj_rank-word-frequency\": self.adj_frequency_list,\n",
-    "                #\"adj_phrases\": self.adj_phrase_list,\n",
-    "                \"verb_rank-word-frequency\": self.verb_frequency_list,\n",
-    "                \"verb_phrases\": self.verb_phrase_list}\n",
-    "        print(self.info)\n",
+    "    # def collate_data(self):\n",
+    "    #     self.info = {\n",
+    "    #     # \"id\": self.link_id,\n",
+    "    #     #         \"uuid\": self.link_uuid,\n",
+    "    #             \"adj_rank-word-frequency\": self.adj_frequency_list,\n",
+    "    #             #\"adj_phrases\": self.adj_phrase_list,\n",
+    "    #             \"verb_rank-word-frequency\": self.verb_frequency_list,\n",
+    "    #             \"verb_phrases\": self.verb_phrase_list}\n",
+    "    #     print(self.info)\n",
+    "    def get_words(self):        \n",
+    "        self.list_words = []\n",
+    "    # container_results = driver.find_element(By.XPATH, '//ul[@class=\"sentence-mode result-group list-group mt-4 \"]')\n",
+    "# list_results = container_results.find_elements(By.XPATH, './li')\n",
+    "        words = self.driver.find_elements(By.XPATH, '//span[@class=\"  result font-weight-bold text-success \"]')\n",
+    "# for result in list_results:\n",
+    "#     words = result.find_elements(By.XPATH, '//span[@class=\"  result font-weight-bold text-success \"]')\n",
+    "        for word in words:\n",
+    "            self.list_words.append(word.text)\n",
+    "        print(self.list_words)\n",
+    "\n",
+    "    def get_infinitives(self):\n",
+    "        list_infinitives = []\n",
+    "        for word in self.list_words:\n",
+    "            dictionary_url = f'https://es.thefreedictionary.com/{word}'\n",
+    "            self.driver.get(dictionary_url)\n",
+    "            try:\n",
+    "                accept_cookies = self.driver.find_element(By.XPATH, '/html/body/div[5]/div/div[1]/div/div/div[2]/a[1]')\n",
+    "                accept_cookies.click()\n",
+    "            except NoSuchElementException:\n",
+    "                pass\n",
+    "            try:\n",
+    "                infinitive = self.driver.find_element(By.tag_name, 'h1')\n",
+    "                list_infinitives.append(infinitive.text)\n",
+    "            except NoSuchElementException:\n",
+    "                list_infinitives.append('N/A')\n",
+    "            self.driver.close()\n",
+    "        print(list_infinitives)\n",
     "    \n",
     "    def get_phrases(self, word_class):\n",
     "        self.adj_phrase_list = []\n",
@@ -342,6 +373,7 @@
     "        if word_class == 'v':\n",
     "            for sentence in sentences:\n",
     "                self.verb_phrase_list.append(sentence.text)\n",
+    "                self.info[\"verb_phrases\"] = self.verb_phrase_list\n",
     "            # for sentence in sentences:\n",
     "        #     print(sentence.text)\n",
     "\n",
@@ -354,10 +386,14 @@
     "        words_frequency = self.soup.findAll('li', {\"class\": \"btn-result list-group-item list-group-item-action\"})\n",
     "        if word_class == 'adj':\n",
     "            for frequency in words_frequency:\n",
-    "                self.adj_frequency_list.append(frequency.text)      \n",
+    "                str = frequency.text\n",
+    "                stripped_str = str.strip()\n",
+    "                self.adj_frequency_list.append(stripped_str)\n",
+    "                self.info[\"adj_rank-word-frequency\"] = self.adj_frequency_list      \n",
     "        if word_class == 'v':\n",
     "            for frequency in words_frequency:\n",
-    "                self.verb_frequency_list.append(frequency.text)  \n",
+    "                self.verb_frequency_list.append(frequency.text)\n",
+    "                self.info[\"verb_rank-word-frequency\"] = self.verb_frequency_list  \n",
     "        # for frequency in words_frequency:\n",
     "        #     print(frequency.text)\n",
     "\n",
@@ -374,6 +410,7 @@
     "            scraper.get_list_links('//*[@id=\"search_results\"]', './div')\n",
     "            time.sleep(2)\n",
     "            # scraper.get_img_links(XPATH_main_image='//div[@class=\"image-sizing-wrapper\"]', XPATH_thumbnail_container='//div[@class=\"thumbnails-tray\"]', XPATH_thumbnails='./div')\n",
+    "            scraper.create_uuid(scraper.link_list)\n",
     "            # scraper.create_id()\n",
     "            #scraper.get_html()\n",
     "            # scraper.get_info_from_html()\n",
